HTM-979: Fixes new letter spacing introduced by new Angular version

--- a/projects/core/assets/custom-theme.scss
+++ b/projects/core/assets/custom-theme.scss
@@ -111,7 +111,11 @@ $app-theme: mat.define-light-theme((
 :root {
   --mdc-typography-button-font-weight: 400;
   --mdc-typography-button-letter-spacing: 0.0714285712;
+  --mdc-filled-button-label-text-tracking: 0.0714285712;
+  --mdc-outlined-button-label-text-tracking: 0.0714285712;
+  --mdc-outlined-text-field-label-text-tracking: 0.0714285712;
   --mdc-typography-body1-letter-spacing: 0.0714285712;
+  --mat-menu-item-label-text-tracking: 0.0714285712;
   --mdc-typography-subtitle1-font-size: 14px;
   --mdc-typography-body1-font-size: 14px;
   --base-button-height: 36px;
@@ -119,6 +123,7 @@ $app-theme: mat.define-light-theme((
 
 .mat-mdc-tab-header {
   --mat-tab-header-label-text-letter-spacing: 0.0714285712;
+  --mat-tab-header-label-text-tracking: 0.0714285712;
 }
 
 .mat-mdc-form-field .mdc-text-field--outlined .mdc-notched-outline--upgraded .mdc-floating-label--float-above {
